atg/torch_wrapper_gen.odin

	atg__ctc_loss_backward_tensor :: proc(out: ^Tensor, grad: Tensor, log_probs: Tensor, targets: Tensor, input_lengths: Tensor, target_lengths: Tensor, neg_log_likelihood: Tensor, log_alpha: Tensor, blank: i64, zero_infinity: c.int) ---
	atg__ctc_loss_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, log_probs: Tensor, targets: Tensor, input_lengths_data: [^]i64, input_lengths_len: c.int, target_lengths_data: [^]i64, target_lengths_len: c.int, blank: i64, zero_infinity: c.int) ---
	atg__ctc_loss_tensor :: proc(out: ^Tensor, log_probs: Tensor, targets: Tensor, input_lengths: Tensor, target_lengths: Tensor, blank: i64, zero_infinity: c.int) ---
	atg__ctc_loss_tensor_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, log_probs: Tensor, targets: Tensor, input_lengths: Tensor, target_lengths: Tensor, blank: i64, zero_infinity: c.int) ---
	atg__cudnn_attention_backward :: proc(out: ^Tensor, grad_out: Tensor, query: Tensor, key: Tensor, value: Tensor, logsumexp: Tensor, philox_seed: Tensor, philox_offset: Tensor, attn_bias: Tensor, cum_seq_q: Tensor, cum_seq_k: Tensor, max_q: i64, max_k: i64, dropout_p: f64, is_causal: c.int, scale_v: f64, scale_null: rawptr) ---
	atg__cudnn_ctc_loss :: proc(out: ^Tensor, log_probs: Tensor, targets: Tensor, input_lengths_data: [^]i64, input_lengths_len: c.int, target_lengths_data: [^]i64, target_lengths_len: c.int, blank: i64, deterministic: c.int, zero_infinity: c.int) ---
	atg__cudnn_ctc_loss_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, log_probs: Tensor, targets: Tensor, input_lengths_data: [^]i64, input_lengths_len: c.int, target_lengths_data: [^]i64, target_lengths_len: c.int, blank: i64, deterministic: c.int, zero_infinity: c.int) ---
	atg__cudnn_ctc_loss_tensor :: proc(out: ^Tensor, log_probs: Tensor, targets: Tensor, input_lengths: Tensor, target_lengths: Tensor, blank: i64, deterministic: c.int, zero_infinity: c.int) ---
	atg__cudnn_init_dropout_state :: proc(out: ^Tensor, dropout: f64, train: c.int, dropout_seed: i64, options_kind: c.int, options_device: c.int) ---
	atg__cudnn_init_dropout_state_out :: proc(out: ^Tensor, dropout: f64, train: c.int, dropout_seed: i64) ---
	atg__cudnn_rnn :: proc(out: ^Tensor, input: Tensor, weight_data: ^Tensor, weight_len: c.int, weight_stride0: i64, weight_buf: Tensor, hx: Tensor, cx: Tensor, mode: i64, hidden_size: i64, proj_size: i64, num_layers: i64, batch_first: c.int, dropout: f64, train: c.int, bidirectional: c.int, batch_sizes_data: [^]i64, batch_sizes_len: c.int, dropout_state: Tensor) ---
	atg__cudnn_rnn_flatten_weight :: proc(out: ^Tensor, weight_arr_data: ^Tensor, weight_arr_len: c.int, weight_stride0: i64, input_size: i64, mode: i64, hidden_size: i64, proj_size: i64, num_layers: i64, batch_first: c.int, bidirectional: c.int) ---
	atg__cudnn_rnn_flatten_weight_out :: proc(out: ^Tensor, weight_arr_data: ^Tensor, weight_arr_len: c.int, weight_stride0: i64, input_size: i64, mode: i64, hidden_size: i64, proj_size: i64, num_layers: i64, batch_first: c.int, bidirectional: c.int) ---
	atg__cudnn_rnn_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, out3: Tensor, out4: Tensor, input: Tensor, weight_data: ^Tensor, weight_len: c.int, weight_stride0: i64, weight_buf: Tensor, hx: Tensor, cx: Tensor, mode: i64, hidden_size: i64, proj_size: i64, num_layers: i64, batch_first: c.int, dropout: f64, train: c.int, bidirectional: c.int, batch_sizes_data: [^]i64, batch_sizes_len: c.int, dropout_state: Tensor) ---
	atg__dim_arange :: proc(out: ^Tensor, like: Tensor, dim: i64) ---
	atg__dirichlet_grad :: proc(out: ^Tensor, x: Tensor, alpha: Tensor, total: Tensor) ---
	atg__dirichlet_grad_out :: proc(out: ^Tensor, x: Tensor, alpha: Tensor, total: Tensor) ---
	atg__dyn_quant_matmul_4bit :: proc(out: ^Tensor, inp: Tensor, packed_weights: Tensor, block_size: i64, in_features: i64, out_features: i64) ---
	atg__dyn_quant_pack_4bit_weight :: proc(out: ^Tensor, weights: Tensor, scales_zeros: Tensor, bias: Tensor, block_size: i64, in_features: i64, out_features: i64) ---
	atg__efficient_attention_backward :: proc(out: ^Tensor, grad_out_: Tensor, query: Tensor, key: Tensor, value: Tensor, bias: Tensor, cu_seqlens_q: Tensor, cu_seqlens_k: Tensor, max_seqlen_q: i64, max_seqlen_k: i64, logsumexp: Tensor, dropout_p: f64, philox_seed: Tensor, philox_offset: Tensor, custom_mask_type: i64, bias_requires_grad: c.int, scale_v: f64, scale_null: rawptr, num_splits_key_v: i64, num_splits_key_null: rawptr, window_size_v: i64, window_size_null: rawptr, shared_storage_dqdkdv: c.int) ---
	atg__efficientzerotensor :: proc(out: ^Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int) ---
	atg__efficientzerotensor_out :: proc(out: ^Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__embedding_bag :: proc(out: ^Tensor, weight: Tensor, indices: Tensor, offsets: Tensor, scale_grad_by_freq: c.int, mode: i64, sparse: c.int, per_sample_weights: Tensor, include_last_offset: c.int, padding_idx: i64) ---
	atg__embedding_bag_backward :: proc(out: ^Tensor, grad: Tensor, indices: Tensor, offsets: Tensor, offset2bag: Tensor, bag_size: Tensor, maximum_indices: Tensor, num_weights: i64, scale_grad_by_freq: c.int, mode: i64, sparse: c.int, per_sample_weights: Tensor, padding_idx: i64) ---
	atg__embedding_bag_dense_backward :: proc(out: ^Tensor, grad: Tensor, indices: Tensor, offset2bag: Tensor, bag_size: Tensor, maximum_indices: Tensor, num_weights: i64, scale_grad_by_freq: c.int, mode: i64, per_sample_weights: Tensor, padding_idx: i64) ---
	atg__embedding_bag_dense_backward_out :: proc(out: ^Tensor, grad: Tensor, indices: Tensor, offset2bag: Tensor, bag_size: Tensor, maximum_indices: Tensor, num_weights: i64, scale_grad_by_freq: c.int, mode: i64, per_sample_weights: Tensor, padding_idx: i64) ---
	atg__embedding_bag_forward_only :: proc(out: ^Tensor, weight: Tensor, indices: Tensor, offsets: Tensor, scale_grad_by_freq: c.int, mode: i64, sparse: c.int, per_sample_weights: Tensor, include_last_offset: c.int, padding_idx: i64) ---
	atg__embedding_bag_forward_only_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, out3: Tensor, weight: Tensor, indices: Tensor, offsets: Tensor, scale_grad_by_freq: c.int, mode: i64, sparse: c.int, per_sample_weights: Tensor, include_last_offset: c.int, padding_idx: i64) ---
	atg__embedding_bag_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, out3: Tensor, weight: Tensor, indices: Tensor, offsets: Tensor, scale_grad_by_freq: c.int, mode: i64, sparse: c.int, per_sample_weights: Tensor, include_last_offset: c.int, padding_idx: i64) ---
	atg__embedding_bag_per_sample_weights_backward :: proc(out: ^Tensor, grad: Tensor, weight: Tensor, indices: Tensor, offsets: Tensor, offset2bag: Tensor, mode: i64, padding_idx: i64) ---
	atg__embedding_bag_per_sample_weights_backward_out :: proc(out: ^Tensor, grad: Tensor, weight: Tensor, indices: Tensor, offsets: Tensor, offset2bag: Tensor, mode: i64, padding_idx: i64) ---
	atg__embedding_bag_sparse_backward :: proc(out: ^Tensor, grad: Tensor, indices: Tensor, offsets: Tensor, offset2bag: Tensor, bag_size: Tensor, num_weights: i64, scale_grad_by_freq: c.int, mode: i64, per_sample_weights: Tensor, padding_idx: i64) ---
	atg__empty_affine_quantized :: proc(out: ^Tensor, size_data: [^]i64, size_len: c.int, options_kind: c.int, options_device: c.int, scale: f64, zero_point: i64) ---
	atg__empty_affine_quantized_out :: proc(out: ^Tensor, size_data: [^]i64, size_len: c.int, scale: f64, zero_point: i64) ---
	atg__empty_per_channel_affine_quantized :: proc(out: ^Tensor, size_data: [^]i64, size_len: c.int, scales: Tensor, zero_points: Tensor, axis: i64, options_kind: c.int, options_device: c.int) ---
	atg__empty_per_channel_affine_quantized_out :: proc(out: ^Tensor, size_data: [^]i64, size_len: c.int, scales: Tensor, zero_points: Tensor, axis: i64) ---
	atg__euclidean_dist :: proc(out: ^Tensor, x1: Tensor, x2: Tensor) ---
	atg__euclidean_dist_out :: proc(out: ^Tensor, x1: Tensor, x2: Tensor) ---
	atg__fake_quantize_learnable_per_channel_affine :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, axis: i64, quant_min: i64, quant_max: i64, grad_factor: f64) ---
	atg__fake_quantize_learnable_per_channel_affine_backward :: proc(out: ^Tensor, grad: Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, axis: i64, quant_min: i64, quant_max: i64, grad_factor: f64) ---
	atg__fake_quantize_learnable_per_channel_affine_out :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, axis: i64, quant_min: i64, quant_max: i64, grad_factor: f64) ---
	atg__fake_quantize_learnable_per_tensor_affine :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, quant_min: i64, quant_max: i64, grad_factor: f64) ---
	atg__fake_quantize_learnable_per_tensor_affine_backward :: proc(out: ^Tensor, grad: Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, quant_min: i64, quant_max: i64, grad_factor: f64) ---
	atg__fake_quantize_learnable_per_tensor_affine_out :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, quant_min: i64, quant_max: i64, grad_factor: f64) ---
	atg__fake_quantize_per_tensor_affine_cachemask_tensor_qparams :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, fake_quant_enabled: Tensor, quant_min: i64, quant_max: i64) ---
	atg__fake_quantize_per_tensor_affine_cachemask_tensor_qparams_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, fake_quant_enabled: Tensor, quant_min: i64, quant_max: i64) ---
	atg__fft_c2c :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, normalization: i64, forward: c.int) ---
	atg__fft_c2c_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, normalization: i64, forward: c.int) ---
	atg__fft_c2r :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, normalization: i64, last_dim_size: i64) ---
	atg__fft_c2r_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, normalization: i64, last_dim_size: i64) ---
	atg__fft_r2c :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, normalization: i64, onesided: c.int) ---
	atg__fft_r2c_out :: proc(out: ^Tensor, self: Tensor, dim_data: [^]i64, dim_len: c.int, normalization: i64, onesided: c.int) ---
	atg__fill_mem_eff_dropout_mask_ :: proc(out: ^Tensor, self: Tensor, dropout_p: f64, seed: i64, offset: i64) ---
	atg__flash_attention_backward :: proc(out: ^Tensor, grad_out: Tensor, query: Tensor, key: Tensor, value: Tensor, logsumexp: Tensor, cum_seq_q: Tensor, cum_seq_k: Tensor, max_q: i64, max_k: i64, dropout_p: f64, is_causal: c.int, rng_state: Tensor, unused: Tensor, scale_v: f64, scale_null: rawptr, window_size_left_v: i64, window_size_left_null: rawptr, window_size_right_v: i64, window_size_right_null: rawptr) ---
	atg__foobar :: proc(out: ^Tensor, self: Tensor, arg1: c.int, arg2: c.int, arg3: c.int) ---
	atg__foobar_out :: proc(out: ^Tensor, self: Tensor, arg1: c.int, arg2: c.int, arg3: c.int) ---
	atg__functional_assert_async :: proc(out: ^Tensor, self: Tensor, assert_msg_ptr: cstring, assert_msg_len: c.int, dep_token: Tensor) ---
	atg__functional_assert_scalar :: proc(out: ^Tensor, self_scalar: Scalar, assert_msg_ptr: cstring, assert_msg_len: c.int, dep_token: Tensor) ---
	atg__functional_sym_constrain_range :: proc(out: ^Tensor, size: Scalar, min_v: i64, min_null: rawptr, max_v: i64, max_null: rawptr, dep_token: Tensor) ---
	atg__functional_sym_constrain_range_for_size :: proc(out: ^Tensor, size: Scalar, min_v: i64, min_null: rawptr, max_v: i64, max_null: rawptr, dep_token: Tensor) ---
	atg__fused_dropout :: proc(out: ^Tensor, self: Tensor, p: f64) ---
	atg__fused_dropout_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, self: Tensor, p: f64) ---
